Cursor no longer visible on slides

--- a/public/css/switcharoo.css
+++ b/public/css/switcharoo.css
@@ -1,4 +1,5 @@
 html, body {
+	cursor: none;
 	height: 100%;
 	margin: 0;
 	padding: 0;
